# pythonita-ia

./: .gitignore  ANALISI_MIGLIORAMENTI.md  AVVIA_GUI.bat  BUILD_COMPLETATA.txt  BUILD_FINALE_v3.4.txt  CHANGELOG.md  CHANGELOG_v2.1.md  CHANGELOG_v2.2.md  CHANGELOG_v3.4.md  COMANDI_SUPPORTATI.md  COSA_VEDRAI.md  DOVE_TROVARE_PROGRAMMA.txt  GITHUB_RELEASE_NOTES_v3.3.0.md  GUIDA_OLLAMA_GPU.md  GUIDA_SETUP_ARDUINO.md  GUIDA_SPEECH_MIGLIORATO.md  GUMROAD_DESCRIPTION.md  GUMROAD_DESCRIPTION_v3.3.0.txt  IMPROVEMENTS_ROADMAP.md  ISTRUZIONI_RELEASE_GITHUB.txt  ISTRUZIONI_UPLOAD_GUMROAD.md  LEGGI_QUESTO_ADESSO.txt  LICENSE  LINGUAGGIO_NATURALE.md  MAPPA_AGGIORNAMENTI.md  MARKETING_v3.3.0.md  MATERIALE_VENDITA.md  MIGLIORAMENTI_v3.1.md  NUOVE_FEATURE_v3.4_SUMMARY.md  PIANO_ESPANSIONE_8GB.md  PRODOTTO_FINALE_GUMROAD.txt  PROGETTO_COMPLETATO_FINALE.md  README.md  README_EN.md  RELEASE_NOTES.md  RELEASE_NOTES_v3.4.0.md  RELEASE_v3.3.0_SUMMARY.txt  RIEPILOGO_FINALE.md  RIEPILOGO_FINALE_v3.5_PRO.md  RIEPILOGO_OTTIMIZZAZIONE.md  (+51 more)
.history/: AVVIA_20251016025711.bat  CHANGELOG_20251016020104.md  CHANGELOG_v2.3_20251016011031.md  CHANGELOG_v3.0_20251016012852.md  COME_RILASCIARE_20251016023904.md  FASE_1_COMPLETATA_20251016053928.txt  FATTO_E_DA_FARE_20251016033633.md  ISTRUZIONI_EXE_20251016024313.md  MIGLIORAMENTI_FASE_1_20251016053928.md  PLUGIN_DEVELOPMENT_GUIDE_20251016074858.md  PROCESSO_VENDITA_OGGI_20251016032032.md  PROGRESSO_E_PROSSIMI_PASSI_20251016042043.md  PUBBLICA_RELEASE_20251016033321.bat  QUICK_START_20251016052628.md  README_20251016020104.md  README_20251016022850.md  README_20251016022855.md  README_20251016030946.md  README_20251016031022.md  README_AVVIO_20251016025620.md  RELEASE_DESCRIPTION_20251016033022.md  RELEASE_NOTES_v3.1_20251016020024.md  VISUALIZZATORE_3D_20251016020104.md  build_exe_20251016024208.py  demo_completa_v3_20251016013637.py  demo_completa_v3_20251016013709.py  (+39 more)
(+307 files in other folders)
